Fix background problems on mobile and add box-shadow

--- a/css/cover.css
+++ b/css/cover.css
@@ -42,14 +42,18 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-image:url("../assets/img/palm_trees_dark.jpg");
+  width: 100%;
+  background: url("../assets/img/palm_trees_dark.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   background-size: cover;
+  box-shadow: 0 0 250px 300px rgba(0,0,0,.5) inset;
 }
 body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  box-shadow: inset 0 0 200px rgba(0,0,0,.5);
   font-family: 'edelsans', sans-serif; 
 }
 
@@ -134,7 +138,9 @@ body {
  */
 
 .cover {
-  padding: 0 120px;
+  max-width: 72%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*
